fix css message word wrap

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -63,11 +63,7 @@
   padding: 5px 5px;
   margin: 2px 5px;
   word-wrap: break-word;
-}
-
-.message pre
-{
-  margin: 0px;
+  white-space: pre-wrap;
 }
 
 .self{
